// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sidebar renders 1`] = `
<div
  className="sidebar"
  id="sidebar-1"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <Logotype
          alt="TESTBRAND vertical logo"
          size="md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
          type="vertical"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
        key="Home Page"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons-outlined"
          >
            home
          </i>
          

          Home Page
          

        </a>
      </li>
      <li
        className="main-nav-li"
        key="Get Started"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons-outlined rotated"
          >
            wb_incandescent
          </i>
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
              key="Accessibility0"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="material-icons-outlined rotated"
                >
                  accessibility
                </i>
                Accessibility
              </a>
            </li>
            <li
              className="secondary-nav-li leaf"
              key="Colors1"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="material-icons-outlined rotated"
                >
                  palette
                </i>
                Colors
              </a>
              <AddNewLevel
                currentNav={
                  Object {
                    "children": Array [
                      Object {
                        "title": "Primary colors",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "title": "Children 1",
                          },
                          Object {
                            "title": "Children 2",
                          },
                        ],
                        "group": true,
                        "title": "Secondary colors",
                      },
                    ],
                    "icon": <i
                      className="material-icons-outlined rotated"
                    >
                      palette
                    </i>,
                    "title": "Colors",
                  }
                }
                previousTitle="Get Started"
              />
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders 10 levels when four levels is provided 1`] = `
<Sidebar
  extendedSidebar={true}
  id="test"
  navList={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "children": Array [
                                      Object {
                                        "children": Array [
                                          Object {
                                            "title": "Level 10",
                                          },
                                        ],
                                        "group": true,
                                        "title": "Level 9",
                                      },
                                    ],
                                    "title": "Level 8",
                                  },
                                ],
                                "title": "Level 7",
                              },
                            ],
                            "title": "Level 6",
                          },
                        ],
                        "title": "Level 5",
                      },
                    ],
                    "title": "Level 4",
                  },
                ],
                "title": "Level 3",
              },
            ],
            "icon": <i
              className="material-icons-outlined rotated"
            >
              accessibility
            </i>,
            "title": "Level 2",
          },
        ],
        "icon": <i
          className="material-icons-outlined rotated"
        >
          wb_incandescent
        </i>,
        "title": "Level 1",
      },
    ]
  }
>
  <div
    className="sidebar"
    id="test"
  >
    <nav
      className="sidebar-main-nav"
    >
      <div
        className="sidebar-logo"
      >
        

        <a
          aria-label="To homepage"
          href="/"
        >
          

          <Logotype
            alt="TESTBRAND vertical logo"
            size="md"
            src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            type="vertical"
          >
            <img
              alt="TESTBRAND vertical logo"
              className="logotype-vertical logotype-md"
              src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            />
          </Logotype>
          

        </a>
      </div>
      <ul
        className="main-nav-ul"
      >
        <li
          className="main-nav-li active"
          key="Level 1"
        >
          

          <a
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons-outlined rotated"
            >
              wb_incandescent
            </i>
            

            Level 1
            

          </a>
          <nav
            className="sidebar-secondary-nav"
          >
            <header
              className="secondary-nav-header"
            >
              Level 1
            </header>
            <ul
              className="secondary-nav-ul"
            >
              <li
                className="secondary-nav-li leaf"
                key="Level 20"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons-outlined rotated"
                  >
                    accessibility
                  </i>
                  Level 2
                </a>
                <AddNewLevel
                  currentNav={
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "children": Array [
                                                Object {
                                                  "children": Array [
                                                    Object {
                                                      "title": "Level 10",
                                                    },
                                                  ],
                                                  "group": true,
                                                  "title": "Level 9",
                                                },
                                              ],
                                              "title": "Level 8",
                                            },
                                          ],
                                          "title": "Level 7",
                                        },
                                      ],
                                      "title": "Level 6",
                                    },
                                  ],
                                  "title": "Level 5",
                                },
                              ],
                              "title": "Level 4",
                            },
                          ],
                          "title": "Level 3",
                        },
                      ],
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>,
                      "title": "Level 2",
                    }
                  }
                  previousTitle="Level 1"
                >
                  <ul
                    aria-hidden={true}
                  >
                    

                    <a
                      className="previous-nav"
                      href="#"
                      onClick={[Function]}
                    >
                      

                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_back_ios
                      </i>
                      

                      <span>
                        Back to 
                        Level 1
                      </span>
                      

                    </a>
                    <header>
                      <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>
                      Level 2
                    </header>
                    <li
                      className="leaf"
                      key="Level 30"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Level 3
                      </a>
                      <AddNewLevel
                        currentNav={
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "children": Array [
                                      Object {
                                        "children": Array [
                                          Object {
                                            "children": Array [
                                              Object {
                                                "children": Array [
                                                  Object {
                                                    "children": Array [
                                                      Object {
                                                        "title": "Level 10",
                                                      },
                                                    ],
                                                    "group": true,
                                                    "title": "Level 9",
                                                  },
                                                ],
                                                "title": "Level 8",
                                              },
                                            ],
                                            "title": "Level 7",
                                          },
                                        ],
                                        "title": "Level 6",
                                      },
                                    ],
                                    "title": "Level 5",
                                  },
                                ],
                                "title": "Level 4",
                              },
                            ],
                            "title": "Level 3",
                          }
                        }
                        previousTitle="Level 2"
                      >
                        <ul
                          aria-hidden={true}
                        >
                          

                          <a
                            className="previous-nav"
                            href="#"
                            onClick={[Function]}
                          >
                            

                            <i
                              aria-hidden="true"
                              className="material-icons"
                            >
                              arrow_back_ios
                            </i>
                            

                            <span>
                              Back to 
                              Level 2
                            </span>
                            

                          </a>
                          <header>
                            Level 3
                          </header>
                          <li
                            className="leaf"
                            key="Level 40"
                          >
                            

                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Level 4
                            </a>
                            <AddNewLevel
                              currentNav={
                                Object {
                                  "children": Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "children": Array [
                                                Object {
                                                  "children": Array [
                                                    Object {
                                                      "children": Array [
                                                        Object {
                                                          "title": "Level 10",
                                                        },
                                                      ],
                                                      "group": true,
                                                      "title": "Level 9",
                                                    },
                                                  ],
                                                  "title": "Level 8",
                                                },
                                              ],
                                              "title": "Level 7",
                                            },
                                          ],
                                          "title": "Level 6",
                                        },
                                      ],
                                      "title": "Level 5",
                                    },
                                  ],
                                  "title": "Level 4",
                                }
                              }
                              previousTitle="Level 3"
                            >
                              <ul
                                aria-hidden={true}
                              >
                                

                                <a
                                  className="previous-nav"
                                  href="#"
                                  onClick={[Function]}
                                >
                                  

                                  <i
                                    aria-hidden="true"
                                    className="material-icons"
                                  >
                                    arrow_back_ios
                                  </i>
                                  

                                  <span>
                                    Back to 
                                    Level 3
                                  </span>
                                  

                                </a>
                                <header>
                                  Level 4
                                </header>
                                <li
                                  className="leaf"
                                  key="Level 50"
                                >
                                  

                                  <a
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Level 5
                                  </a>
                                  <AddNewLevel
                                    currentNav={
                                      Object {
                                        "children": Array [
                                          Object {
                                            "children": Array [
                                              Object {
                                                "children": Array [
                                                  Object {
                                                    "children": Array [
                                                      Object {
                                                        "children": Array [
                                                          Object {
                                                            "title": "Level 10",
                                                          },
                                                        ],
                                                        "group": true,
                                                        "title": "Level 9",
                                                      },
                                                    ],
                                                    "title": "Level 8",
                                                  },
                                                ],
                                                "title": "Level 7",
                                              },
                                            ],
                                            "title": "Level 6",
                                          },
                                        ],
                                        "title": "Level 5",
                                      }
                                    }
                                    previousTitle="Level 4"
                                  >
                                    <ul
                                      aria-hidden={true}
                                    >
                                      

                                      <a
                                        className="previous-nav"
                                        href="#"
                                        onClick={[Function]}
                                      >
                                        

                                        <i
                                          aria-hidden="true"
                                          className="material-icons"
                                        >
                                          arrow_back_ios
                                        </i>
                                        

                                        <span>
                                          Back to 
                                          Level 4
                                        </span>
                                        

                                      </a>
                                      <header>
                                        Level 5
                                      </header>
                                      <li
                                        className="leaf"
                                        key="Level 60"
                                      >
                                        

                                        <a
                                          href="#"
                                          onClick={[Function]}
                                        >
                                          Level 6
                                        </a>
                                        <AddNewLevel
                                          currentNav={
                                            Object {
                                              "children": Array [
                                                Object {
                                                  "children": Array [
                                                    Object {
                                                      "children": Array [
                                                        Object {
                                                          "children": Array [
                                                            Object {
                                                              "title": "Level 10",
                                                            },
                                                          ],
                                                          "group": true,
                                                          "title": "Level 9",
                                                        },
                                                      ],
                                                      "title": "Level 8",
                                                    },
                                                  ],
                                                  "title": "Level 7",
                                                },
                                              ],
                                              "title": "Level 6",
                                            }
                                          }
                                          previousTitle="Level 5"
                                        >
                                          <ul
                                            aria-hidden={true}
                                          >
                                            

                                            <a
                                              className="previous-nav"
                                              href="#"
                                              onClick={[Function]}
                                            >
                                              

                                              <i
                                                aria-hidden="true"
                                                className="material-icons"
                                              >
                                                arrow_back_ios
                                              </i>
                                              

                                              <span>
                                                Back to 
                                                Level 5
                                              </span>
                                              

                                            </a>
                                            <header>
                                              Level 6
                                            </header>
                                            <li
                                              className="leaf"
                                              key="Level 70"
                                            >
                                              

                                              <a
                                                href="#"
                                                onClick={[Function]}
                                              >
                                                Level 7
                                              </a>
                                              <AddNewLevel
                                                currentNav={
                                                  Object {
                                                    "children": Array [
                                                      Object {
                                                        "children": Array [
                                                          Object {
                                                            "children": Array [
                                                              Object {
                                                                "title": "Level 10",
                                                              },
                                                            ],
                                                            "group": true,
                                                            "title": "Level 9",
                                                          },
                                                        ],
                                                        "title": "Level 8",
                                                      },
                                                    ],
                                                    "title": "Level 7",
                                                  }
                                                }
                                                previousTitle="Level 6"
                                              >
                                                <ul
                                                  aria-hidden={true}
                                                >
                                                  

                                                  <a
                                                    className="previous-nav"
                                                    href="#"
                                                    onClick={[Function]}
                                                  >
                                                    

                                                    <i
                                                      aria-hidden="true"
                                                      className="material-icons"
                                                    >
                                                      arrow_back_ios
                                                    </i>
                                                    

                                                    <span>
                                                      Back to 
                                                      Level 6
                                                    </span>
                                                    

                                                  </a>
                                                  <header>
                                                    Level 7
                                                  </header>
                                                  <li
                                                    className="leaf"
                                                    key="Level 80"
                                                  >
                                                    

                                                    <a
                                                      href="#"
                                                      onClick={[Function]}
                                                    >
                                                      Level 8
                                                    </a>
                                                    <AddNewLevel
                                                      currentNav={
                                                        Object {
                                                          "children": Array [
                                                            Object {
                                                              "children": Array [
                                                                Object {
                                                                  "title": "Level 10",
                                                                },
                                                              ],
                                                              "group": true,
                                                              "title": "Level 9",
                                                            },
                                                          ],
                                                          "title": "Level 8",
                                                        }
                                                      }
                                                      previousTitle="Level 7"
                                                    >
                                                      <ul
                                                        aria-hidden={true}
                                                      >
                                                        

                                                        <a
                                                          className="previous-nav"
                                                          href="#"
                                                          onClick={[Function]}
                                                        >
                                                          

                                                          <i
                                                            aria-hidden="true"
                                                            className="material-icons"
                                                          >
                                                            arrow_back_ios
                                                          </i>
                                                          

                                                          <span>
                                                            Back to 
                                                            Level 7
                                                          </span>
                                                          

                                                        </a>
                                                        <header>
                                                          Level 8
                                                        </header>
                                                        <li
                                                          className="group"
                                                          key="Level 90"
                                                        >
                                                          

                                                          <a
                                                            href="#"
                                                            onClick={[Function]}
                                                          >
                                                            Level 9
                                                          </a>
                                                          <AddNewLevel
                                                            currentNav={
                                                              Object {
                                                                "children": Array [
                                                                  Object {
                                                                    "title": "Level 10",
                                                                  },
                                                                ],
                                                                "group": true,
                                                                "title": "Level 9",
                                                              }
                                                            }
                                                            previousTitle="Level 8"
                                                          >
                                                            <ul
                                                              aria-hidden={true}
                                                            >
                                                              

                                                              <li
                                                                className="nav-leaf"
                                                                key="Level 100"
                                                              >
                                                                

                                                                <a
                                                                  href="#"
                                                                  onClick={[Function]}
                                                                >
                                                                  Level 10
                                                                </a>
                                                              </li>
                                                            </ul>
                                                          </AddNewLevel>
                                                        </li>
                                                      </ul>
                                                    </AddNewLevel>
                                                  </li>
                                                </ul>
                                              </AddNewLevel>
                                            </li>
                                          </ul>
                                        </AddNewLevel>
                                      </li>
                                    </ul>
                                  </AddNewLevel>
                                </li>
                              </ul>
                            </AddNewLevel>
                          </li>
                        </ul>
                      </AddNewLevel>
                    </li>
                  </ul>
                </AddNewLevel>
              </li>
            </ul>
          </nav>
        </li>
      </ul>
    </nav>
  </div>
</Sidebar>
`;

exports[`Component: Sidebar renders five levels when four levels is provided 1`] = `
<Sidebar
  extendedSidebar={true}
  id="test"
  navList={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "title": "Gran children 1",
                      },
                    ],
                    "group": true,
                    "title": "Children 2",
                  },
                ],
                "title": "Primary colors",
              },
            ],
            "icon": <i
              className="material-icons-outlined rotated"
            >
              accessibility
            </i>,
            "title": "Accessibility",
          },
        ],
        "icon": <i
          className="material-icons-outlined rotated"
        >
          wb_incandescent
        </i>,
        "title": "Get Started",
      },
    ]
  }
>
  <div
    className="sidebar"
    id="test"
  >
    <nav
      className="sidebar-main-nav"
    >
      <div
        className="sidebar-logo"
      >
        

        <a
          aria-label="To homepage"
          href="/"
        >
          

          <Logotype
            alt="TESTBRAND vertical logo"
            size="md"
            src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            type="vertical"
          >
            <img
              alt="TESTBRAND vertical logo"
              className="logotype-vertical logotype-md"
              src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            />
          </Logotype>
          

        </a>
      </div>
      <ul
        className="main-nav-ul"
      >
        <li
          className="main-nav-li active"
          key="Get Started"
        >
          

          <a
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons-outlined rotated"
            >
              wb_incandescent
            </i>
            

            Get Started
            

          </a>
          <nav
            className="sidebar-secondary-nav"
          >
            <header
              className="secondary-nav-header"
            >
              Get Started
            </header>
            <ul
              className="secondary-nav-ul"
            >
              <li
                className="secondary-nav-li leaf"
                key="Accessibility0"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons-outlined rotated"
                  >
                    accessibility
                  </i>
                  Accessibility
                </a>
                <AddNewLevel
                  currentNav={
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "title": "Gran children 1",
                                },
                              ],
                              "group": true,
                              "title": "Children 2",
                            },
                          ],
                          "title": "Primary colors",
                        },
                      ],
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>,
                      "title": "Accessibility",
                    }
                  }
                  previousTitle="Get Started"
                >
                  <ul
                    aria-hidden={true}
                  >
                    

                    <a
                      className="previous-nav"
                      href="#"
                      onClick={[Function]}
                    >
                      

                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_back_ios
                      </i>
                      

                      <span>
                        Back to 
                        Get Started
                      </span>
                      

                    </a>
                    <header>
                      <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>
                      Accessibility
                    </header>
                    <li
                      className="leaf"
                      key="Primary colors0"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Primary colors
                      </a>
                      <AddNewLevel
                        currentNav={
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [
                                  Object {
                                    "title": "Gran children 1",
                                  },
                                ],
                                "group": true,
                                "title": "Children 2",
                              },
                            ],
                            "title": "Primary colors",
                          }
                        }
                        previousTitle="Accessibility"
                      >
                        <ul
                          aria-hidden={true}
                        >
                          

                          <a
                            className="previous-nav"
                            href="#"
                            onClick={[Function]}
                          >
                            

                            <i
                              aria-hidden="true"
                              className="material-icons"
                            >
                              arrow_back_ios
                            </i>
                            

                            <span>
                              Back to 
                              Accessibility
                            </span>
                            

                          </a>
                          <header>
                            Primary colors
                          </header>
                          <li
                            className="group"
                            key="Children 20"
                          >
                            

                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Children 2
                            </a>
                            <AddNewLevel
                              currentNav={
                                Object {
                                  "children": Array [
                                    Object {
                                      "title": "Gran children 1",
                                    },
                                  ],
                                  "group": true,
                                  "title": "Children 2",
                                }
                              }
                              previousTitle="Primary colors"
                            >
                              <ul
                                aria-hidden={true}
                              >
                                

                                <li
                                  className="nav-leaf"
                                  key="Gran children 10"
                                >
                                  

                                  <a
                                    href="#"
                                    onClick={[Function]}
                                  >
                                    Gran children 1
                                  </a>
                                </li>
                              </ul>
                            </AddNewLevel>
                          </li>
                        </ul>
                      </AddNewLevel>
                    </li>
                  </ul>
                </AddNewLevel>
              </li>
            </ul>
          </nav>
        </li>
      </ul>
    </nav>
  </div>
</Sidebar>
`;

exports[`Component: Sidebar renders four levels when four levels is provided 1`] = `
<Sidebar
  extendedSidebar={true}
  id="test"
  navList={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "title": "Children 1",
                  },
                ],
                "group": true,
                "title": "Primary colors",
              },
            ],
            "icon": <i
              className="material-icons-outlined rotated"
            >
              accessibility
            </i>,
            "title": "Accessibility",
          },
        ],
        "icon": <i
          className="material-icons-outlined rotated"
        >
          wb_incandescent
        </i>,
        "title": "Get Started",
      },
    ]
  }
>
  <div
    className="sidebar"
    id="test"
  >
    <nav
      className="sidebar-main-nav"
    >
      <div
        className="sidebar-logo"
      >
        

        <a
          aria-label="To homepage"
          href="/"
        >
          

          <Logotype
            alt="TESTBRAND vertical logo"
            size="md"
            src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            type="vertical"
          >
            <img
              alt="TESTBRAND vertical logo"
              className="logotype-vertical logotype-md"
              src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            />
          </Logotype>
          

        </a>
      </div>
      <ul
        className="main-nav-ul"
      >
        <li
          className="main-nav-li active"
          key="Get Started"
        >
          

          <a
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons-outlined rotated"
            >
              wb_incandescent
            </i>
            

            Get Started
            

          </a>
          <nav
            className="sidebar-secondary-nav"
          >
            <header
              className="secondary-nav-header"
            >
              Get Started
            </header>
            <ul
              className="secondary-nav-ul"
            >
              <li
                className="secondary-nav-li leaf"
                key="Accessibility0"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons-outlined rotated"
                  >
                    accessibility
                  </i>
                  Accessibility
                </a>
                <AddNewLevel
                  currentNav={
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "title": "Children 1",
                            },
                          ],
                          "group": true,
                          "title": "Primary colors",
                        },
                      ],
                      "icon": <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>,
                      "title": "Accessibility",
                    }
                  }
                  previousTitle="Get Started"
                >
                  <ul
                    aria-hidden={true}
                  >
                    

                    <a
                      className="previous-nav"
                      href="#"
                      onClick={[Function]}
                    >
                      

                      <i
                        aria-hidden="true"
                        className="material-icons"
                      >
                        arrow_back_ios
                      </i>
                      

                      <span>
                        Back to 
                        Get Started
                      </span>
                      

                    </a>
                    <header>
                      <i
                        className="material-icons-outlined rotated"
                      >
                        accessibility
                      </i>
                      Accessibility
                    </header>
                    <li
                      className="group"
                      key="Primary colors0"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Primary colors
                      </a>
                      <AddNewLevel
                        currentNav={
                          Object {
                            "children": Array [
                              Object {
                                "title": "Children 1",
                              },
                            ],
                            "group": true,
                            "title": "Primary colors",
                          }
                        }
                        previousTitle="Accessibility"
                      >
                        <ul
                          aria-hidden={true}
                        >
                          

                          <li
                            className="nav-leaf"
                            key="Children 10"
                          >
                            

                            <a
                              href="#"
                              onClick={[Function]}
                            >
                              Children 1
                            </a>
                          </li>
                        </ul>
                      </AddNewLevel>
                    </li>
                  </ul>
                </AddNewLevel>
              </li>
            </ul>
          </nav>
        </li>
      </ul>
    </nav>
  </div>
</Sidebar>
`;

exports[`Component: Sidebar renders one level when one level is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <Logotype
          alt="TESTBRAND vertical logo"
          size="md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
          type="vertical"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
        key="Home Page"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons-outlined"
          >
            home
          </i>
          

          Home Page
          

        </a>
      </li>
      <li
        className="main-nav-li"
        key="Get Started"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons-outlined rotated"
          >
            wb_incandescent
          </i>
          

          Get Started
          

        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar renders three levels when three levels is provided 1`] = `
<Sidebar
  id="test"
  navList={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "title": "Primary colors",
              },
            ],
            "group": true,
            "title": "Accessibility",
          },
        ],
        "icon": <i
          className="material-icons-outlined rotated"
        >
          wb_incandescent
        </i>,
        "title": "Get Started",
      },
    ]
  }
>
  <div
    className="sidebar"
    id="test"
  >
    <nav
      className="sidebar-main-nav"
    >
      <div
        className="sidebar-logo"
      >
        

        <a
          aria-label="To homepage"
          href="/"
        >
          

          <Logotype
            alt="TESTBRAND vertical logo"
            size="md"
            src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            type="vertical"
          >
            <img
              alt="TESTBRAND vertical logo"
              className="logotype-vertical logotype-md"
              src="/TEST/img/logo/TESTBRAND-logo-v.svg"
            />
          </Logotype>
          

        </a>
      </div>
      <ul
        className="main-nav-ul"
      >
        <li
          className="main-nav-li active"
          key="Get Started"
        >
          

          <a
            href="#"
            onClick={[Function]}
          >
            

            <i
              className="material-icons-outlined rotated"
            >
              wb_incandescent
            </i>
            

            Get Started
            

          </a>
          <nav
            className="sidebar-secondary-nav"
          >
            <header
              className="secondary-nav-header"
            >
              Get Started
            </header>
            <ul
              className="secondary-nav-ul"
            >
              <li
                className="secondary-nav-li group"
                key="Accessibility0"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  Accessibility
                </a>
                <AddNewLevel
                  currentNav={
                    Object {
                      "children": Array [
                        Object {
                          "title": "Primary colors",
                        },
                      ],
                      "group": true,
                      "title": "Accessibility",
                    }
                  }
                  previousTitle="Get Started"
                >
                  <ul
                    aria-hidden={true}
                  >
                    

                    <li
                      className="nav-leaf"
                      key="Primary colors0"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Primary colors
                      </a>
                    </li>
                  </ul>
                </AddNewLevel>
              </li>
            </ul>
          </nav>
        </li>
      </ul>
    </nav>
  </div>
</Sidebar>
`;

exports[`Component: Sidebar renders two levels when two levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <nav
    className="sidebar-main-nav"
  >
    <div
      className="sidebar-logo"
    >
      

      <a
        aria-label="To homepage"
        href="/"
      >
        

        <Logotype
          alt="TESTBRAND vertical logo"
          size="md"
          src="/TEST/img/logo/TESTBRAND-logo-v.svg"
          type="vertical"
        />
        

      </a>
    </div>
    <ul
      className="main-nav-ul"
    >
      <li
        className="main-nav-li active"
        key="Get Started"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons-outlined rotated"
          >
            wb_incandescent
          </i>
          

          Get Started
          

        </a>
        <nav
          className="sidebar-secondary-nav"
        >
          <header
            className="secondary-nav-header"
          >
            Get Started
          </header>
          <ul
            className="secondary-nav-ul"
          >
            <li
              className="secondary-nav-li leaf"
              key="Accessibility0"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="material-icons-outlined rotated"
                >
                  accessibility
                </i>
                Accessibility
              </a>
            </li>
            <li
              className="secondary-nav-li leaf"
              key="Colors1"
            >
              

              <a
                href="#"
                onClick={[Function]}
              >
                <i
                  className="material-icons-outlined rotated"
                >
                  palette
                </i>
                Colors
              </a>
            </li>
          </ul>
        </nav>
      </li>
    </ul>
  </nav>
</div>
`;
